<resources>
    <string name="app_name">Next Race App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_item_main_page">Main Page</string>
    <string name="drawer_item_all_races">All Races</string>
    <string name="drawer_item_search">Search</string>
    <string name="search_by_category">Category</string>
    <string name="search_by_country">Country</string>
    <string name="search_by_track">Track</string>
    <string name="search_by_date">Date</string>
    <string name="search_previous">Search in previous races</string>
    <string name="search_error_message">No races found!</string>
    <string name="drawer_divider_most_popular">Most Popular</string>
    <string name="drawer_item_formula_1">Formula 1</string>
    <string name="drawer_item_formula_2">Formula 2</string>
    <string name="drawer_item_formula_3">Formula 3</string>
    <string name="drawer_item_formula_e">Formula E</string>
    <string name="drawer_item_dtm">Deutsche Tourenwagen Masters</string>
    <string name="drawer_divider_misc">Miscellaneous</string>
    <string name="drawer_item_previous_races">Previous Races</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_donate">Donate</string>
    <string name="item_label_date">Date</string>
    <string name="item_label_local_time">Local Time</string>
    <string name="item_label_cet_time">CET Time</string>
    <string name="item_label_laps">Laps</string>
    <string name="hint_category">Category Name</string>
    <string name="hint_country">Country Name</string>
    <string name="hint_track">Track Name</string>
    <string name="main_page_error">No races this month!</string>
    <string name="null_string" />
    <string name="race_tba">TBA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previous_race">Previous Race</string>
    <string name="coming_up">Coming Up</string>
    <string name="this_month">This Month</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
    </string-array>
</resources>
