<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_page"
            android:title="@string/drawer_item_main_page"/>
        <item
            android:id="@+id/search"
            android:title="@string/drawer_item_search"/>
        <item
            android:id="@+id/all_races"
            android:title="@string/drawer_item_all_races"/>
        <item
            android:id="@+id/previous_races"
            android:title="@string/drawer_item_previous_races"/>
        <item
            android:id="@+id/categories_menu"
            android:title="@string/drawer_divider_most_popular">
            <menu>
                <item
                    android:id="@+id/formula_1"
                    android:title="@string/drawer_item_formula_1"/>
                <item
                    android:id="@+id/formula_2"
                    android:title="@string/drawer_item_formula_2"/>
                <item
                    android:id="@+id/formula_3"
                    android:title="@string/drawer_item_formula_3"/>
                <item
                    android:id="@+id/formula_e"
                    android:title="@string/drawer_item_formula_e"/>
                <item
                    android:id="@+id/dtm"
                    android:title="@string/drawer_item_dtm"/>
            </menu>
        </item>
        <item
            android:id="@+id/misc_menu"
            android:title="@string/drawer_divider_misc">
            <menu>
                <item
                    android:id="@+id/about"
                    android:title="@string/drawer_item_about"/>
                <item
                    android:id="@+id/donate"
                    android:title="@string/drawer_item_donate"/>
            </menu>
        </item>
    </group>
</menu>