<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/TabsView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <Switch
            android:id="@+id/switch_search_country"
            android:paddingTop="70dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/regular"
            android:text="@string/search_previous"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:hint="@string/hint_country"
                android:fontFamily="@font/regular"
                android:layout_marginStart="20dp"
                android:id="@+id/editText_country"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_weight="1"
                android:inputType="text"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/button_find_country"
                android:text="@string/drawer_item_search"
                android:fontFamily="@font/regular"
                android:background="@color/colorBackground"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".fragments.SearchByCategoryFragment">

        <TextView
            android:id="@+id/search_country_error_message"
            android:textSize="20sp"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_race_list_by_country"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</LinearLayout>